<resources xmlns:color="http://schemas.android.com/tools">
    <string name="app_name">Panino Genuino</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="SampleMail">Mail</string>
    <string name="SampleIndirizzo">Via Francesco Todaro 13</string>
    <string name="SampleCittà">Rende</string>
    <string name="SampleCap">87036</string>
    <string name="SampleNome">Nome</string>
    <string name="SampleCognome">Cognome</string>
    <string name="SampleTelefono">Telefono</string>
    <string name="SamplePassword">Password</string>
    <string name="SampleConfermaPassword">Conferma Password</string>
    <string-array name="order_filter_array">
        <item name="Richiesto">Richiesto</item>
        <item name="InPreparazione">In Preparazione</item>
        <item name="InConsegna">In Consegna</item>
        <item name="Consegnato">Consegnato</item>
        <item name="Tutto">Tutto</item>
    </string-array>
    <string-array name="order_status_array">
        <item name="Richiesto">Richiesto</item>
        <item name="InPreparazione">In Preparazione</item>
        <item name="InConsegna">In Consegna</item>
        <item name="Consegnato">Consegnato</item>
    </string-array>

    <string name="channel_name">alpachino</string>
    <string name="channel_description">alpachino notification</string>

</resources>
